--- a/ClashX/Base.lproj/Main.storyboard
+++ b/ClashX/Base.lproj/Main.storyboard
@@ -193,6 +193,7 @@
                         <outlet property="proxyProvidersMenu" destination="PXU-hU-r0O" id="2cc-kM-p9d"/>
                         <outlet property="proxySettingMenuItem" destination="8se-yr-wmp" id="yvm-QP-yoA"/>
                         <outlet property="remoteConfigAutoupdateMenuItem" destination="r8s-OI-tgf" id="tmB-30-trh"/>
+                        <outlet property="ruleProvidersMenu" destination="wiW-XY-cyg" id="AVe-D7-8ft"/>
                         <outlet property="separatorLineTop" destination="1fM-p6-bHd" id="NFb-qS-TKR"/>
                         <outlet property="sepatatorLineEndProxySelect" destination="n67-fU-hLx" id="Vgv-N6-SOH"/>
                         <outlet property="showNetSpeedIndicatorMenuItem" destination="YIO-Vj-64f" id="9a5-3N-Ylk"/>
@@ -376,6 +377,10 @@
                                     <menuItem title="Proxy providers" id="4Jz-gx-7X9">
                                         <modifierMask key="keyEquivalentModifierMask"/>
                                         <menu key="submenu" title="Proxy providers" id="PXU-hU-r0O"/>
+                                    </menuItem>
+                                    <menuItem title="Rule providers" id="cJg-BS-yk2">
+                                        <modifierMask key="keyEquivalentModifierMask"/>
+                                        <menu key="submenu" title="Rule providers" id="wiW-XY-cyg"/>
                                     </menuItem>
                                     <menuItem isSeparatorItem="YES" id="mmr-bS-73Y"/>
                                     <menuItem title="Hide unselectable" id="C3l-5G-vzB">
